<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="regist_title">注册账号</string>
    <string name="regist">注册</string>
    <string name="login_title">账号登录</string>
    <string name="login">登录</string>
    <string name="login_info">点击登录，享受更好的体验~~</string>
    <string name="user_id">账号</string>
    <string name="write_user_id">请输入用户ID</string>
    <string name="user_pass">密码</string>
    <string name="write_user_pass">请输入用户密码</string>
    <string name="save_user">是否保存账号密码</string>
    <string name="index">首页</string>
    <string name="me">我的</string>
    <string name="local">本地</string>
    <string name="set">设置</string>
    <string name="out">登出</string>
    <string name="music_name">这是曲名</string>
    <string name="music_songer">这是歌手</string>
    <string name="music_null">暂无歌词</string>
    <string name="networkmusic">网络音乐</string>

</resources>