<?xml version="1.0" encoding="utf-8"?>
<!-- 总体线性垂直布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <!-- 显示网络音乐 -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/networkmusic"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:layout_gravity="center" >
    </ListView>

    <!-- 底部线性水平布局 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#252831"
        android:baselineAligned="false" >

        <!-- 线性垂直布局  左边按钮 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/music_index"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_marginTop="3dp"
                android:background="#252831"
                android:scaleType="centerInside"
                android:src="@drawable/music_c" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/index"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- 线性垂直布局  右边按钮 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/music_me"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"
                android:background="#252831"
                android:scaleType="centerInside"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/me"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>