<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <!-- 这是歌名栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/music_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/music_name"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/music_songer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/music_songer"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/share"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:background="#000000"
                android:scaleType="centerInside"
                android:src="@drawable/share" />
        </LinearLayout>
    </LinearLayout>

    <!-- 这是歌词栏 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/music_null"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <!-- 这是歌进度栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <TextView
            android:id="@+id/cur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="00:00"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:thumb="@drawable/seekbar" />

        <TextView
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="00:00"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- 这是控制栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/lovemusic"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:background="#000000"
                android:scaleType="centerInside"
                android:src="@drawable/for1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/last_song"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:background="#000000"
                android:onClick="previous"
                android:scaleType="centerInside"
                android:src="@drawable/last_song" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/go"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:background="#000000"
                android:onClick="play"
                android:scaleType="centerInside"
                android:src="@drawable/go" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/next_song"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:background="#000000"
                android:onClick="next"
                android:scaleType="centerInside"
                android:src="@drawable/next_song" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/list"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:background="#000000"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_sort_by_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>